--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   ],
   "license": "MIT",
   "require": {
-    "squizlabs/php_codesniffer": "3.*"
+    "squizlabs/php_codesniffer": "^3.2",
+    "mi-schi/phpmd-extension": "^4.2"
   }
 }
