--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eslint": "^4.16.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-react": "^7.6.1",
-    "htmllint-cli": "^0.0.6",
+    "miaoxing-htmllint-cli": "^0.7.0",
     "stylelint": "^8.4.0",
     "stylelint-config-recommended": "^2.0.1",
     "stylelint-scss": "^2.2.0"
