feat: 增加 bin 入口

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "miaoxing"
   ],
   "license": "MIT",
+  "bin": [
+    "bin/miaoxing-phpcs.sh"
+  ],
   "require": {
     "squizlabs/php_codesniffer": "^3.3",
     "mi-schi/phpmd-extension": "^4.3",
