--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   ],
   "license": "MIT",
   "bin": [
-    "bin/miaoxing-phpcs.sh"
+    "bin/miaoxing-phpcs"
   ],
   "require": {
     "squizlabs/php_codesniffer": "^3.3",
