--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "bin": [
     "bin/miaoxing-php-cs-fixer",
     "bin/miaoxing-phpcs",
-    "bin/miaoxing-phpmd"
+    "bin/miaoxing-phpmd",
+    "bin/miaoxing-phpunit"
   ],
   "require": {
     "squizlabs/php_codesniffer": "^3.3",
