--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   "require": {
     "squizlabs/php_codesniffer": "^3.3",
     "mi-schi/phpmd-extension": "^4.3",
-    "friendsofphp/php-cs-fixer": "^2.16"
+    "friendsofphp/php-cs-fixer": "^2.16",
+    "phpunit/phpunit": "^8 || ^9"
   }
 }
