chore: publish => release,避免和工具自带命令冲突

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "miaoxing-stylelint": "bin/miaoxing-stylelint"
   },
   "scripts": {
-    "publish": "npm publish --registry=https://registry.npmjs.org"
+    "release": "npm publish --registry=https://registry.npmjs.org"
   },
   "dependencies": {
     "babel-eslint": "^8.2.1",
