chore: 移除 amd env，已经不用 require() 和 define()

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,10 +11,9 @@
     "allowImportExportEverywhere": true
   },
   "env": {
-    "node": true,
     "browser": true,
-    "amd": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
   "plugins": [
     "react"
