chore: ignoreFiles 改为 stylelintignore
1. ignoreFiles 相对于配置路径，所以无效
2. 忽略 vendor， node_modules 等大量文件，使用 stylelintignore 更有效

https://stylelint.io/user-guide/configure#ignorefiles

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bin/miaoxing-stylelint",
     ".eslintignore",
     ".eslintrc.json",
+    ".stylelintignore",
     ".stylelintrc.json"
   ],
   "bin": {
