--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "files": [
     "bin/miaoxing-eslint",
+    "bin/miaoxing-jest",
     "bin/miaoxing-stylelint",
     ".eslintignore",
     ".eslintrc.json",
@@ -25,9 +26,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
     "eslint-plugin-react": "^7.20.0",
+    "jest": "^26.0.1",
     "stylelint": "^13.6.0",
-    "stylelint-config-standard": "^20.0.0",
     "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.17.2"
   },
   "devDependencies": {
