fix: 增加 miaoxing-jest 命令

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "bin": {
     "miaoxing-eslint": "bin/miaoxing-eslint",
+    "miaoxing-jest": "bin/miaoxing-jest",
     "miaoxing-stylelint": "bin/miaoxing-stylelint"
   },
   "scripts": {
