--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -3,10 +3,9 @@
   <description>The coding standard for Miaoxing.</description>
 
   <rule ref="Miaoxing">
-    <!-- Allow /* @see Xxx */ for code hint -->
-    <exclude name="Squiz.Commenting.BlockComment.SingleLine" />
   </rule>
 
   <exclude-pattern type="relative">docs/*</exclude-pattern>
   <exclude-pattern type="relative">plugins/*</exclude-pattern>
+  <exclude-pattern type="relative">storage/*</exclude-pattern>
 </ruleset>
