--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,5 +28,10 @@
       "version": "detect"
     }
   },
-  "rules": {}
+  "rules": {
+    // 导致
+    // 1. 不能用箭头函数定义组件
+    // 2. 象表格的 render 这类的渲染函数也需加上
+    "react/display-name": "off"
+  }
 }
