--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "miaoxing/coding-standards",
+  "type": "phpstan-extension",
   "keywords": [
     "miaoxing"
   ],
@@ -8,12 +9,30 @@
     "bin/miaoxing-php-cs-fixer",
     "bin/miaoxing-phpcs",
     "bin/miaoxing-phpmd",
+    "bin/miaoxing-phpstan",
     "bin/miaoxing-phpunit"
   ],
   "require": {
     "squizlabs/php_codesniffer": "^3.3",
     "mi-schi/phpmd-extension": "^4.3",
     "friendsofphp/php-cs-fixer": "^2.16",
-    "phpunit/phpunit": "^8 || ^9"
+    "phpunit/phpunit": "^8 || ^9",
+    "phpstan/phpstan": "^0.12.29",
+    "phpstan/phpstan-phpunit": "^0.12.11",
+    "wei/wei": "dev-master",
+    "phpstan/extension-installer": "^1.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "Miaoxing\\CodingStandards\\": "src",
+      "Wei\\": "vendor/wei/wei/lib"
+    }
+  },
+  "extra": {
+    "phpstan": {
+      "includes": [
+        "extension.neon"
+      ]
+    }
   }
 }
