--- a/extension.neon
+++ b/extension.neon
@@ -1,5 +1,5 @@
 includes:
-	- vendor/phpstan/phpstan/conf/bleedingEdge.neon
+	- %currentWorkingDirectory%/vendor/phpstan/phpstan/conf/bleedingEdge.neon
 
 parameters:
     level: 5
