--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "phpunit/phpunit": "^8 || ^9",
     "phpstan/phpstan": "^0.12.30",
     "phpstan/phpstan-phpunit": "^0.12.11",
-    "wei/wei": "dev-master",
+    "wei/wei": "^0.9.24",
     "phpstan/extension-installer": "^1.0"
   },
   "autoload": {
