fix(phpmnd): add bin file

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "bin/miaoxing-php-cs-fixer",
     "bin/miaoxing-phpcs",
     "bin/miaoxing-phpmd",
+    "bin/miaoxing-phpmnd",
     "bin/miaoxing-phpstan",
     "bin/miaoxing-phpunit"
   ],
