--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,13 @@
     // 导致
     // 1. 不能用箭头函数定义组件
     // 2. 象表格的 render 这类的渲染函数也需加上
-    "react/display-name": "off"
+    "react/display-name": "off",
+    // 允许 {noUsed, ...rest} = props;
+    "no-unused-vars": [
+      "error",
+      {
+        "ignoreRestSiblings": true
+      }
+    ]
   }
 }
