--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "miaoxing/coding-standards",
+  "name": "miaoxing/dev",
   "type": "phpstan-extension",
   "keywords": [
     "miaoxing"
