--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   },
   "dependencies": {
     "babel-eslint": "^10.1.0",
+    "babel-preset-miaoxing": "^0.1.3",
     "eslint": "^7.2.0",
     "eslint-plugin-react": "^7.20.0",
     "jest": "^26.0.1",
+    "jest-preset-miaoxing": "^0.1.0",
     "stylelint": "^13.6.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
