--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
     "phpunit/phpunit": "^8 || ^9",
     "phpstan/phpstan": "^0.12.30",
     "phpstan/phpstan-phpunit": "^0.12.11",
-    "wei/wei": "^0.9.24",
     "phpstan/extension-installer": "^1.0",
     "wp-coding-standards/wpcs": "^2.3",
     "povils/phpmnd": "^2.3.2"
@@ -28,7 +27,7 @@
   "autoload": {
     "psr-4": {
       "Miaoxing\\CodingStandards\\": "src",
-      "Wei\\": "vendor/wei/wei/lib"
+      "Wei\\": "src\\Wei"
     }
   },
   "repositories": [
