--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,14 @@
     }
   },
   "rules": {
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "jsx-quotes": [
+      "error",
+      "prefer-double"
+    ],
     // 导致
     // 1. 不能用箭头函数定义组件
     // 2. 象表格的 render 这类的渲染函数也需加上
