--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,10 @@
       "error",
       "prefer-double"
     ],
+    "semi": [
+      "error",
+      "always"
+    ],
     // 导致
     // 1. 不能用箭头函数定义组件
     // 2. 象表格的 render 这类的渲染函数也需加上
