fix(release): 发布 npm 失败

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "miaoxing-jest": "bin/miaoxing-jest",
     "miaoxing-stylelint": "bin/miaoxing-stylelint"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "semantic-release": "semantic-release"
   },
