--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "scripts": {
-    "semantic-release": "semantic-release"
-  },
   "dependencies": {
     "babel-eslint": "^10.1.0",
     "babel-preset-miaoxing": "^0.1.3",
@@ -42,9 +39,6 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "husky": "^4.2.5",
-    "semantic-release": "^17.0.8"
+    "husky": "^4.2.5"
   }
 }
