--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -8,4 +8,7 @@
   <exclude-pattern type="relative">docs/*</exclude-pattern>
   <exclude-pattern type="relative">plugins/*</exclude-pattern>
   <exclude-pattern type="relative">storage/*</exclude-pattern>
+
+  <!-- 暂用于 miaoxing/dev -->
+  <exclude-pattern type="relative">tests/Fixture/Sniffs/*</exclude-pattern>
 </ruleset>
