--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^7.2.0",
     "eslint-plugin-react": "^7.20.0",
     "jest": "^26.0.1",
+    "jest-cli": "^26.0.1",
     "jest-preset-miaoxing": "^0.2.0",
     "stylelint": "^13.6.0",
     "stylelint-config-recommended-scss": "^4.2.0",
