--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,16 @@
     "bin/miaoxing-phpunit"
   ],
   "require": {
+    "php": "^7.2|^8.0",
     "squizlabs/php_codesniffer": "^3.3",
     "mi-schi/phpmd-extension": "^4.3",
-    "friendsofphp/php-cs-fixer": "^2.16",
+    "friendsofphp/php-cs-fixer": "^2.18",
     "phpunit/phpunit": "^8 || ^9",
     "phpstan/phpstan": "^0.12.30",
     "phpstan/phpstan-phpunit": "^0.12.11",
     "phpstan/extension-installer": "^1.0",
     "wp-coding-standards/wpcs": "^2.3",
-    "miaoxing/phpmnd": "^2.3"
+    "povils/phpmnd": "^2.4"
   },
   "autoload": {
     "psr-4": {
