feat(phpstan): 识别 trait 中使用 `@mixin` 的方法

--- a/extension.neon
+++ b/extension.neon
@@ -28,3 +28,10 @@ services:
         class: Miaoxing\CodingStandards\PHPStan\WeiPropertyExtension
         tags:
             - phpstan.broker.propertiesClassReflectionExtension
+
+    -
+        class: Miaoxing\CodingStandards\PHPStan\TraitMixinMethodsClassReflectionExtension
+        tags:
+            - phpstan.broker.methodsClassReflectionExtension
+        arguments:
+              mixinExcludeClasses: %mixinExcludeClasses%
