feat(phpstan): 识别 trait 中使用 `@mixin` 的属性

--- a/extension.neon
+++ b/extension.neon
@@ -35,3 +35,10 @@ services:
             - phpstan.broker.methodsClassReflectionExtension
         arguments:
               mixinExcludeClasses: %mixinExcludeClasses%
+
+    -
+        class: Miaoxing\CodingStandards\PHPStan\TraitMixinPropertiesClassReflectionExtension
+        tags:
+          - phpstan.broker.propertiesClassReflectionExtension
+        arguments:
+          mixinExcludeClasses: %mixinExcludeClasses%
