feat(phpstan): 增加 pages 目录检查

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,6 +3,7 @@ parameters:
 
     paths:
         - %currentWorkingDirectory%/src
+        - %currentWorkingDirectory%/pages
         - %currentWorkingDirectory%/tests
 
     scanFiles:
