feat(phpstan): 支持直接在插件目录下调用 `miaoxing-phpstan`

--- a/extension.neon
+++ b/extension.neon
@@ -1,5 +1,5 @@
 includes:
-	- %currentWorkingDirectory%/vendor/phpstan/phpstan/conf/bleedingEdge.neon
+	- %rootDir%/conf/bleedingEdge.neon
 
 parameters:
     reportUnmatchedIgnoredErrors: false
