--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /coverage/
 /yarn.lock
 /yarn-error.log
+/report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # php
 /vendor/
@@ -13,3 +14,13 @@ composer.lock
 phpunit.xml
 .php_cs.cache
 .phpunit.result.cache
+
+# php-coveralls
+/build/logs/clover.xml
+
+# miaoxing
+/storage/
+/tests/config-local.php
+
+# wei
+/log/
