fix(stylelint): 忽略 `color-hex-length` 规则
多个值归类一起时，使用完整的 hex 值更方便

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,5 +2,8 @@
   "extends": [
     "stylelint-config-standard",
     "stylelint-config-recommended-scss"
-  ]
+  ],
+  "rules": {
+    "color-hex-length": null
+  }
 }
