--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "preset": "jest-preset-miaoxing"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "babel-eslint": "^10.1.0",
     "babel-preset-miaoxing": "^0.3.0",
     "eslint": "^7.2.0",
