--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "friendsofphp/php-cs-fixer": "^2.18",
     "phpunit/phpunit": "^8 || ^9",
     "wp-coding-standards/wpcs": "^2.3",
-    "povils/phpmnd": "^2.4"
+    "povils/phpmnd": "^2.4",
+    "miaoxing/phpstan-miaoxing": "dev-develop/build"
   },
   "autoload-dev": {
     "psr-4": {
@@ -33,5 +34,10 @@
       "./vendor/bin/phpcs --config-set installed_paths $(pwd),$(pwd)/vendor/wp-coding-standards/wpcs",
       "./vendor/bin/phpcs -i"
     ]
+  },
+  "extra": {
+    "require-ci": {
+      "miaoxing/phpstan-miaoxing": "miaoxing/phpstan-miaoxing"
+    }
   }
 }
