--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "phpunit/phpunit": "^8 || ^9",
     "wp-coding-standards/wpcs": "^2.3",
     "povils/phpmnd": "^2.4",
-    "miaoxing/phpstan-miaoxing": "dev-develop/build"
+    "miaoxing/phpstan-miaoxing": "^0.1.0"
   },
   "autoload-dev": {
     "psr-4": {
@@ -37,7 +37,7 @@
   },
   "extra": {
     "require-ci": {
-      "miaoxing/phpstan-miaoxing": "miaoxing/phpstan-miaoxing"
+      "miaoxing/phpstan-miaoxing": "miaoxing/phpstan-miaoxing as 0.1.x-dev"
     }
   }
 }
