feat: 更新 `react` 到 17，设置 `react/jsx-uses-react` 和 `react/react-in-jsx-scope` 规则为 `off`，已有的代码需移除不使用的 `React`
BREAKING CHANGE: 更新 `react` 到 17，已有的代码需移除不使用的 `React`

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,7 +55,10 @@
       {
         "ignoreRestSiblings": true
       }
-    ]
+    ],
+    // React 17 无需引入 React
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "overrides": [
     {
