fix(stylelint): 忽略 `unit-case` 规则，允许转换工具忽略 "1PX"

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,7 @@
     "stylelint-config-recommended-scss"
   ],
   "rules": {
-    "color-hex-length": null
+    "color-hex-length": null,
+    "unit-case": null
   }
 }
