ci: 增加 node 16，默认为 16

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,7 +106,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 10, 12, 14 ]
+        node-version: [ 10, 12, 14, 16 ]
     steps:
       - uses: actions/checkout@v2
 
@@ -481,7 +481,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 14 ]
+        node-version: [ 16 ]
 
     steps:
       - uses: actions/checkout@v2
@@ -516,7 +516,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [ 14 ]
+        node-version: [ 16 ]
     steps:
       - uses: actions/checkout@v2
 
