feat(dev): 统一忽略 `new static`

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,3 +5,6 @@ parameters:
         # 引入 *Mixin 类
         - %currentWorkingDirectory%/docs/auto-completion.php
         - %currentWorkingDirectory%/vendor/wei/wei/docs/auto-completion.php
+
+    ignoreErrors:
+        -   "#^Unsafe usage of new static\\(\\)\\.$#"
