--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,6 +93,7 @@ jobs:
           REDIS_PORT: ${{ job.services.redis.ports[6379] }}
 
       - name: Upload coverage results to Coveralls
+        continue-on-error: true
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_PARALLEL: true
@@ -157,6 +158,7 @@ jobs:
 
       - name: Coveralls
         if: startsWith(hashFiles('coverage/lcov.info'), '5df6e0e27613') == false
+        continue-on-error: true
         env:
           COVERALLS_FLAG_NAME: node-${{ matrix.node-version }}
         uses: coverallsapp/github-action@master
@@ -167,6 +169,7 @@ jobs:
   coveralls-finish:
     needs: [ phpunit, jest ]
     runs-on: ubuntu-18.04
+    continue-on-error: true
     steps:
       - name: Coveralls Finished
         uses: coverallsapp/github-action@master
