--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
   ],
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime"
   ],
   "settings": {
     "react": {
@@ -55,10 +56,7 @@
       {
         "ignoreRestSiblings": true
       }
-    ],
-    // React 17 无需引入 React
-    "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    ]
   },
   "overrides": [
     {
