build: 增加允许的插件，兼容 composer 2.2+

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,11 @@
       "./vendor/bin/phpcs -i"
     ]
   },
+  "config": {
+    "allow-plugins": {
+      "phpstan/extension-installer": true
+    }
+  },
   "extra": {
     "require-ci": {
       "miaoxing/phpstan-miaoxing": "miaoxing/phpstan-miaoxing as 1.x-dev"
