--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.2', '7.3', '7.4' ]
+        php-versions: [ '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3' ]
     services:
       mysql:
         image: mysql:5.7
@@ -184,7 +184,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.4' ]
+        php-versions: [ '8.3' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -244,7 +244,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.4' ]
+        php-versions: [ '8.3' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -304,7 +304,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.4' ]
+        php-versions: [ '8.3' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -364,7 +364,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.4' ]
+        php-versions: [ '8.3' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -424,7 +424,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.4' ]
+        php-versions: [ '8.3' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
