--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -233,7 +233,7 @@ jobs:
 
       - name: Composer install
         run: |
-          composer install --no-progress --prefer-dist --optimize-autoloader
+          composer require wei/wei --no-progress --prefer-dist --optimize-autoloader
 
       - name: Run
         run: vendor/bin/phpstan analyse --memory-limit=1G --debug -c phpstan-for-self.neon
