--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,7 +129,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Replace package dependencies
-        run: npx replace-pkg-dep
+        run: npx replace-pkg-dep package.json main
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
