fix(dev): 增加 povils/phpmnd v2 依赖兼容 PHP 7.2, 7.3

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "friendsofphp/php-cs-fixer": "^3",
     "phpunit/phpunit": "^8 || ^9",
     "wp-coding-standards/wpcs": "^2.3",
-    "povils/phpmnd": "^3",
+    "povils/phpmnd": "^2 || ^3",
     "miaoxing/phpstan-miaoxing": "^3.0.0"
   },
   "autoload-dev": {
