--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3' ]
+        php-versions: [ '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3', '8.4' ]
     services:
       mysql:
         image: mysql:5.7
@@ -134,7 +134,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
+          php-version: '8.4'
 
       - name: Get composer cache directory
         id: composer-cache
@@ -184,7 +184,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '8.3' ]
+        php-versions: [ '8.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -244,7 +244,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '8.3' ]
+        php-versions: [ '8.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -304,7 +304,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '8.3' ]
+        php-versions: [ '8.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -364,7 +364,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '8.3' ]
+        php-versions: [ '8.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -424,7 +424,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '8.3' ]
+        php-versions: [ '8.4' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
